v1.8
    - Added script.module.dateutil to imports, for exposing date/time tools to plugin developers.
    - Set services.py to handle updating the user's userdata entry for message_xml_url for when the developer sets
        API Version to a higher number (so is updated just like APIs and Root XML is in these cases)
    - Added new settings for Addon/Web Login to access main menu in settings.xml. VIEW THE README IF YOU WANT TO USE THIS
    - Added strings to English strings.po for new settings.xml weblogin stuff
    - Added weblogin.py to root folder to handle the login work
        - If your site uses variables in the Post header other than username and password for those details, be sure
            to update the weblogin.py to reflect those. Most will use these variables though
    - Added cookies.lwp to root folder to store cookie data when logging in
    - Added user setting for Login notification method : Notification, Popup (OK window), or None
    - Added session_length for sessions to settings.xml. Entry is a number representing Hours
    - If username or password is empty, prints directory entry instructing the user to put credentials in settings
    - Added example php scripts to 'login' folder in root of Jen Template
        - These would be set up and configured on a web host that supports php and mysql, used to verify the
            login data the end user provides if you are not using another website to verify logins
        - These are NOT needed for login setups, if you are using an existing website with user accounts to verify
            login credentials. Just make sure the login_verified in settings.xml includes text unique to the login
            successful page that user's would get if they log in succesfully to your website

v1.7
    - root_xml_url in settings.xml now supports file://, http://, and base64 encoded strings
    - message_xml_url moved from news_window.py to the settings.xml file.