@@ -27,6 +27,7 @@
         <setting label="Cool Choices" type="lsep"/>
         <setting id="news_win" type="bool" label="Enable News Dialog" default="false" visible="true"/>
         <setting id="dlimage" type="bool" label="Enable Image Downloader" default="false" visible="true"/>
+        <setting id="SESSION_HOURS" type="text" label="Session Length for Password Protected XMLs" default="1" visible="true"/>
         <setting label="Display" type="lsep"/>
         <setting label="Enable Settings Context item" type="bool" id="settings_context" default="true"/>
         <setting label="Enable Trailer Context item" type="bool" id="trailer_context" default="true"/>
@@ -92,9 +93,9 @@
         <setting id="debug" type="bool" label="30758" default="false" visible="true"/>
         <setting id="root_xml" type="text" label="30060" option="hidden" default="file://main.xml" visible="false"/>
         <setting id="message_xml_url" type="text" label="News File Location" option="hidden" default="file://news.xml" visible="false"/>
-        <setting label="Current API Set Version" id="current_version" type="text" option="hidden" default="0" visible="false"/>
-        <setting label="Enable Service Notification" id="enable_notification" type="bool" option="hidden" default="true" visible="false"/>
-        <setting label="Disable Service after First Run" id="disable_service" type="bool" option="hidden" default="true" visible="false"/>
+        <setting id="current_version" type="text" label="Current API Set Version" option="hidden" default="0" visible="false"/>
+        <setting id="enable_notification" type="bool" label="Enable Service Notification" option="hidden" default="true" visible="false"/>
+        <setting id="disable_service" type="bool" label="Disable Service after First Run" option="hidden" default="true" visible="false"/>
         <setting id="search_db_location" type="text" label="30061" option="hidden" default="" visible="false"/>
     </category>
 
